--- a/.neuro/live-pachyderm.yml
+++ b/.neuro/live-pachyderm.yml
@@ -131,6 +131,7 @@ jobs:
         descr: MLFlow run ID, which model should be deployed
       mlflow_storage:
         descr: Storage path, where MLFlow server stores model binaries
+        default: 'storage:/${{ project.owner }}/${{ flow.id }}/mlruns'
     volumes:
       - ${{ params.mlflow_storage }}/0/${{ params.run_id }}/artifacts/model/data/model.h5:/storage/model.h5
 
@@ -199,7 +200,7 @@ jobs:
         --NotebookApp.shutdown_no_activity_timeout=7200 \
         --MappingKernelManager.cull_idle_timeout=7200
 
-# Additional jobs
+  # Additional jobs
   filebrowser:
     # https://neu-ro.gitbook.io/neuro-flow/reference/actions-syntax
     action: gh:neuro-actions/filebrowser@v1.0.1
@@ -241,40 +242,60 @@ jobs:
     volumes:
       - ${{ upload(volumes.project).ref_ro }}
     params:
-      mlflow_storage:
-        descr: Storage path, where MLFlow server stores trained model binaries
       pachy_pipeline_name:
         default: train-dogs
-        descr: MLFlow server URI
     env:
       EXPOSE_SSH: "yes"
       PYTHONPATH: /usr/project
       NEURO_PASSED_CONFIG: secret:platform-config
-      PACHY_PIPELINE_NAME: ${{ params.pachy_pipeline_name }}
     bash: |
       # Init pachctl
       pachctl config update context default --pachd-address ${PACHY_URI}
       pachctl config set active-context default
-      pachctl inspect repo "${PACHY_REPO}" || pachctl create repo "${PACHY_REPO}"
+      pachctl inspect repo "${PACHY_REPO}" || \
+          pachctl create repo "${PACHY_REPO}"
 
-      # Store Neuro-flow batch and project definition base-64 encoded
-      BATCH_B64=$(cat ${{ volumes.project.mount }}/.neuro/training.yaml | base64 -w 0)
+      # Store neuro-flow project definition in base64
+      LIVE_B64=$(cat ${{ volumes.project.mount }}/.neuro/live.yml | base64 -w 0)
       PROJECT_B64=$(cat ${{ volumes.project.mount }}/.neuro/project.yml | base64 -w 0)
-
-      # Substitue Neuro-flow batch parameters from job ENV vars and store them b64 encoded
-      PARAMS_B64=$(cat ${{ volumes.project.mount }}/.neuro/training-batch-params.yaml | envsubst | base64 -w 0)
 
       # Create a copy of pipeline template
       cp ${{ volumes.project.mount }}/config/pipeline.json /tmp/pipeline.json
       sed -i -e s/##NEURO_PASSED_CONFIG##/${NEURO_PASSED_CONFIG}/ /tmp/pipeline.json
 
-      # Propagate project and batch definition and its parameters into the Pachyderm pypeline definition
-      sed -i -e s/##PROJECT_B64##/${PROJECT_B64}/ -e s/##BATCH_B64##/${BATCH_B64}/ -e s/##PARAMS_B64##/${PARAMS_B64}/ /tmp/pipeline.json
+      # Propagate project definition to the Pachyderm pipeline
+      sed -i -e s/##PROJECT_B64##/${PROJECT_B64}/ -e s/##LIVE_B64##/${LIVE_B64}/ /tmp/pipeline.json
 
       # Set the pipeline name
-      sed -i -e s/##PIPELINE_NAME##/${PACHY_PIPELINE_NAME}/ /tmp/pipeline.json
+      sed -i -e s/##PIPELINE_NAME##/${{ params.pachy_pipeline_name }}/ /tmp/pipeline.json
 
       # Create pipeline
-      pachctl list pipeline $PACHY_PIPELINE_NAME >/dev/null && pachctl delete pipeline $PACHY_PIPELINE_NAME >/dev/null
+      pachctl list pipeline ${{ params.pachy_pipeline_name }} >/dev/null && \
+          pachctl delete pipeline ${{ params.pachy_pipeline_name }} >/dev/null
       pachctl create pipeline -f /tmp/pipeline.json
-      echo "Pipeline '${PACHY_PIPELINE_NAME}' created successfully."
+
+      echo "Pipeline '${{ params.pachy_pipeline_name }}' created successfully."
+
+  train:
+    image: $[[ images.train.ref ]]
+    preset: cpu-medium
+    life_span: 1d
+    volumes:
+      - storage:/${{ project.owner }}/${{ flow.flow_id }}/mlruns:/usr/local/share/mlruns
+      - $[[ volumes.project.ref ]]
+    env:
+      EXPOSE_SSH: "yes"
+      PYTHONPATH: /usr/project
+    bash: |
+      # Init pachctl
+      pachctl config update context default --pachd-address ${PACHY_URI}
+      pachctl config set active-context default
+
+      # Pull dataset:
+      pachctl get file ${PACHY_REPO}@master:/data/ -r -o $[[ volumes.project.mount ]]/data/ | tee
+
+      ls -R ${{ volumes.project.mount }}/data
+
+      python -u {{ volumes.project.mount }}/src/train.py \
+        --data_dir {{ volumes.project.mount }}/data/Images \
+        --data_description {{ volumes.project.mount }}/data/result.json
