--- a/.neuro/live-pachyderm.yml
+++ b/.neuro/live-pachyderm.yml
@@ -2,7 +2,6 @@ kind: live
 title: demo-oss-dogs
 id: mlops_demo_oss_dogs
 
-
 jobs:
   prepare_remote_dataset:
     name: $[[ flow.title ]]-prepare-dataset
@@ -261,7 +260,10 @@ jobs:
 
       # Create a copy of pipeline template
       cp ${{ volumes.project.mount }}/config/pipeline.json /tmp/pipeline.json
+
+      # Set pipeline config parameters
       sed -i -e s/##NEURO_PASSED_CONFIG##/${NEURO_PASSED_CONFIG}/ /tmp/pipeline.json
+      sed -i -e s/##PACHY_REPO##/${PACHY_REPO}/ /tmp/pipeline.json
 
       # Propagate project definition to the Pachyderm pipeline
       sed -i -e s/##PROJECT_B64##/${PROJECT_B64}/ -e s/##LIVE_B64##/${LIVE_B64}/ /tmp/pipeline.json
@@ -286,16 +288,15 @@ jobs:
     env:
       EXPOSE_SSH: "yes"
       PYTHONPATH: /usr/project
+      PROJECT: ${{ volumes.project.mount }}
     bash: |
       # Init pachctl
       pachctl config update context default --pachd-address ${PACHY_URI}
       pachctl config set active-context default
 
       # Pull dataset:
-      pachctl get file ${PACHY_REPO}@master:/data/ -r -o $[[ volumes.project.mount ]]/data/ | tee
+      pachctl get file ${PACHY_REPO}@master:/data/ -r -o ${PROJECT}/data/ | tee
 
-      ls -R ${{ volumes.project.mount }}/data
-
-      python -u {{ volumes.project.mount }}/src/train.py \
-        --data_dir {{ volumes.project.mount }}/data/Images \
-        --data_description {{ volumes.project.mount }}/data/result.json
+      python -u ${PROJECT}/src/train.py \
+        --data_dir ${PROJECT}/data/Images \
+        --data_description ${PROJECT}/data/result.json
