--- a/.neuro/live-pachyderm.yml
+++ b/.neuro/live-pachyderm.yml
@@ -220,7 +220,7 @@ jobs:
       PGDATA: /var/lib/postgresql/data/pgdata
 
   mlflow_server:
-    image: neuromation/mlflow:1.11.0
+    image: neuromation/mlflow:v1.25.1
     name: $[[ flow.title ]]-mlflow-server
     preset: cpu-small
     http_port: 5000
