--- a/.neuro/live-s3.yml
+++ b/.neuro/live-s3.yml
@@ -31,7 +31,6 @@ jobs:
       - ${{ upload(volumes.config).ref_ro }}
       - ${{ upload(volumes.label_studio).ref_ro }}
     env:
-      PROJECT: /usr/project
       PYTHONPATH: /usr/project
     params:
       extend_dataset_by:
@@ -72,7 +71,6 @@ jobs:
       - ${{ upload(volumes.config).ref_ro }}
       - ${{ upload(volumes.label_studio).ref_ro }}
     env:
-      PROJECT: /usr/project
       DATA_PATH: /usr/project/data/Images
       LABEL_STUDIO_LOCAL_FILES_SERVING_ENABLED: True
       LABEL_STUDIO_PROJECT: /label-studio-project
@@ -121,7 +119,7 @@ jobs:
       neuro blob cp /label-studio/data/label_studio.sqlite3 blob:${BUCKET_NAME}
 
       # Validate dataset:
-      neuro blob ls -r blob:${BUCKET_NAME}
+      neuro blob ls -r blob:${BUCKET_NAME} | tee
       echo "Total images: $(neuro blob ls -r blob:${BUCKET_NAME}/images/ | grep -oP '\w*\.\w+$' | wc -l)" # grep files only
 
   deploy_inference_platform:
@@ -179,7 +177,6 @@ jobs:
       - ${{ params.mlflow_storage }}/0/${{ params.run_id }}/artifacts/model/data/model.h5:/storage/model.h5
     env:
       PYTHONPATH: /usr/project
-      PROJECT: /usr/project
       EXPOSE_SSH: "yes"
       DATA_PATH: /usr/project/data/Images
     params:
